--- a/src/components/MainLayout/MainLayout.css
+++ b/src/components/MainLayout/MainLayout.css
@@ -33,8 +33,13 @@
 }
 
 @keyframes marquee {
-    0% { transform: translateX(100%); }
-    100% { transform: translateX(-100%); }
+    0% {
+        transform: translateX(100%);
+    }
+
+    100% {
+        transform: translateX(-100%);
+    }
 }
 
 .welcome-message:hover a {
@@ -66,18 +71,16 @@
 }
 
 .appContainer .appHero {
-    width: 92%;
+    width: 100%;
     height: 100%;
-    position: absolute;
     right: 0;
     transition: all 0.3s ease;
-    padding: 50px 30px 20px 30px;
+    padding: 50px 0px 20px 0px;
     flex-grow: 1;
 }
 
 .appContainer .appHero.collapsed {
-    width: 80%;
-    position: absolute;
+    width: 100%;
     right: 0;
     transition: all 0.3s ease;
 }
