--- a/src/pages/Infographic/Infographic.css
+++ b/src/pages/Infographic/Infographic.css
@@ -1,8 +1,28 @@
+.infographic-intro,
+.infographic-conclusion {
+    padding: 0px 20px;
+    background: #fff;
+    font-size: 18px;
+}
+
+.infographic-intro h1 {
+    color: #e74c3c;
+    display: flex;
+    justify-content: center;
+}
+
+.infographic-intro div,
+.infographic-conclusion div {
+    text-align: justify;
+    line-height: 1.6;
+    color: #333;
+    font-size: 20px;
+}
+
 .infographic-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 24px;
-    padding: 20px;
+    gap: 20px;
 }
 
 .compare-card,
@@ -13,5 +33,16 @@
 
 .ant-card-head-title {
     font-weight: bold;
-    font-size: 18px;
+    font-size: 20px;
+}
+
+.infographic-container {
+    padding: 30px;
+}
+
+.intro-card,
+.compare-card,
+.timeline-card,
+.conclusion-card {
+    margin-bottom: 30px;
 }
