--- a/src/components/MainLayout/MainLayout.css
+++ b/src/components/MainLayout/MainLayout.css
@@ -24,7 +24,8 @@
 
 .welcome-message a {
     display: inline-block;
-    animation: marquee 20s linear infinite; /* chạy chậm hơn (20s) */
+    animation: marquee 20s linear infinite;
+    /* chạy chậm hơn (20s) */
     padding-left: 100%;
     color: red;
     text-decoration: none;
@@ -33,8 +34,13 @@
 }
 
 @keyframes marquee {
-    0%   { transform: translateX(100%); }
-    100% { transform: translateX(-100%); }
+    0% {
+        transform: translateX(100%);
+    }
+
+    100% {
+        transform: translateX(-100%);
+    }
 }
 
 
@@ -47,12 +53,11 @@
 .slider-container {
     max-width: 1200px;
     margin: 20px auto;
-    overflow: hidden;
 }
 
 .slider-image {
     width: 100%;
-    height: 500px;
+    height: 600px;
     object-fit: cover;
     border-radius: 15px;
     box-shadow: 0 6px 18px rgba(0, 0, 0, 0.2);
@@ -121,7 +126,7 @@
     box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
     /* transition: all 0.3s ease; */
     z-index: 1000;
-    
+
 }
 
 .game-icon:hover {
@@ -161,8 +166,10 @@
     border-radius: 15px;
     width: 80%;
     max-width: 600px;
-    max-height: 80vh; /* Giới hạn chiều cao */
-    overflow-y: auto; /* Cuộn nếu nội dung dài */
+    max-height: 80vh;
+    /* Giới hạn chiều cao */
+    overflow-y: auto;
+    /* Cuộn nếu nội dung dài */
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
     position: relative;
     animation: slideIn 0.3s ease-out;
@@ -324,13 +331,25 @@
 }
 
 @keyframes fadeIn {
-    from { opacity: 0; }
-    to { opacity: 1; }
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
 }
 
 @keyframes slideIn {
-    from { transform: translateY(-50px); opacity: 0; }
-    to { transform: translateY(0); opacity: 1; }
+    from {
+        transform: translateY(-50px);
+        opacity: 0;
+    }
+
+    to {
+        transform: translateY(0);
+        opacity: 1;
+    }
 }
 
 /* Thanh cuộn tùy chỉnh */
